--- a/lectures/ast502-lecture2.ipynb
+++ b/lectures/ast502-lecture2.ipynb
@@ -7,6 +7,7 @@
     "# AST 502, Lecture 2: Tools\n",
     "\n",
     "Xiaohui Fan (Fall 2017)\n",
+    "\n",
     "Ref: notebooks by M. Juric (2017) and G. Richards (2016)\n"
    ]
   },
@@ -49,7 +50,7 @@
     }
    },
    "source": [
-    "# Let' now dowload the class repository\n",
+    "# Let's now dowload the class repository\n",
     "\n",
     "Once Git is installed, make a place where you are going to put the class repository.  Perhaps in a git subdirectory if you think that you might use more repositories later (we might even for this class!).  \n",
     "```\n",
@@ -89,6 +90,7 @@
     "    $ git add ast502-lecture#.ipynb \n",
     "\n",
     "then commit:\n",
+    "\n",
     "    $ git commit -m \"some comments\" \n",
     "   \n",
     "finally \"push\" the changes:\n",
@@ -705,13 +707,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, from next week, we will start student-led seminars. So, please:\n",
+    "\n",
+    "- During the week before the seminar, come to see me, either during office hour (Friday AM), or any other time that you can find me, to discuss your class. Preferrably, at that time, you will already have a version of the notebook that we can go through together. \n",
+    "\n",
+    "- You should post your notebook the night before class. Everyone should update from github before class. \n",
+    "\n",
+    "- Students are encouraged to send feedback to the lecturer. I will send mine as well, and you can come to see me for a debriefing. \n",
+    "\n",
+    "- You should update your notebook after the feedback. \n",
+    "\n",
+    "And you can find a preliminary lecture schedule on the class website. "
+   ]
   }
  ],
  "metadata": {
