--- a/lectures/ast502-lecture3.ipynb
+++ b/lectures/ast502-lecture3.ipynb
@@ -14,10 +14,10 @@
     "\n",
     "A quick review of\n",
     "\n",
-    "(1) probabilities and Bayes' rule\n",
-    "(2) common distribution functions, \n",
-    "(3) central limit theorem\n",
-    "(4) and correlation coefficients. \n",
+    "- probabilities and Bayes' rule\n",
+    "- common distribution functions, \n",
+    "- central limit theorem\n",
+    "- correlation coefficients. \n",
     "\n",
     "based on M. Juric's notebook"
    ]
@@ -36,9 +36,7 @@
     "\n",
     "$x_i$ is a single measurement with $i=1,...,N$\n",
     "\n",
-    "$\\{x_i\\}$ refers to the set of all N measurements\n",
-    "\n",
-    "We are generally trying to *estimate* $h(x)$, the *true* distribution from which the values of $x$ are drawn. We will refer to $h(x)$ as the probability density (distribution) function or the \"pdf\" and $h(x)dx$ is the probability of a value lying between $x$ and $x+dx$. \n",
+    " We are generally trying to *estimate* $h(x)$, the *true* distribution from which the values of $x$ are drawn. We will refer to $h(x)$ as the probability density (distribution) function or the \"pdf\" and $h(x)dx$ is the probability of a value lying between $x$ and $x+dx$. \n",
     "\n",
     "While $h(x)$ is the \"true\" pdf (or **population** pdf).  What we *measure* from the data is the **empirical** pdf, which is denoted $f(x)$.  So, $f(x)$ is a *model* of $h(x)$.  In principle, with infinite data $f(x) \\rightarrow h(x)$, but in reality measurement errors keep this from being strictly true.\n",
     "\n",
@@ -217,7 +215,7 @@
     "\n",
     "- mode $x_m$ -- location \n",
     "\n",
-    " $ \\frac{dh(x)}{dx}_{x_m} = 0 $\n",
+    " $ (\\frac{dh(x)}{dx})_{x_m} = 0 $\n",
     " \n",
     " \n",
     "- p% quantiles, $q_p$\n",
@@ -305,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -316,10 +314,10 @@
     {
      "data": {
       "text/plain": [
-       "0.97779220850437976"
+       "0.99392821642915108"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,6 +450,19 @@
     " Pearson's r is **very** sensitive to outliers. \n",
     " \n",
     " ![Figure 3.24](http://www.astroml.org/_images/fig_correlations_1.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Next Lecture: Sept 6\n",
+    "\n",
+    "## Raga: Maximum Likelihood Estimates "
    ]
   }
  ],
