--- a/lectures/ast502-lecture3.ipynb
+++ b/lectures/ast502-lecture3.ipynb
@@ -15,9 +15,9 @@
     "A quick review of\n",
     "\n",
     "- probabilities and Bayes' rule\n",
-    "- common distribution functions, \n",
+    "- common distribution functions \n",
     "- central limit theorem\n",
-    "- correlation coefficients. \n",
+    "- correlation coefficients\n",
     "\n",
     "based on M. Juric's notebook"
    ]
@@ -273,7 +273,7 @@
     "\n",
     "how large a sample is required to obtain a given accuracy.\n",
     "\n",
-    "e.g. for a Gaussian distribution, variance of the median determined from data is a factor of $\\sqrt{\\pi/2} \\sim 1.25$ time larger than that for mean. So mean is more efficient.\n",
+    "e.g. for a Gaussian distribution, scatter of the median determined from data is a factor of $\\sqrt{\\pi/2} \\sim 1.25$ time larger than that for mean. So mean is more efficient.\n",
     "\n",
     "but how about  \n",
     "\n",
@@ -437,17 +437,19 @@
     }
    },
    "source": [
-    " # Correlation Coefficients\n",
+    " # Correlation Coefficients (in scipy)\n",
     "\n",
-    " 1. Pearson's correlation coefficient \n",
+    " 1. Pearson's correlation coefficient (parametric)\n",
     "\n",
     " $r = \\frac{ \\Sigma (x_i - \\bar{x}) (y_i - \\bar{y}) } {\\sqrt{\\Sigma (x_i - \\bar{x})^2} \\sqrt{\\Sigma (y_i - \\bar{Y})^2}}$\n",
     " \n",
-    " 2. Spearman's correlation coefficient: same as Peason's except using rank X and Y instead of actual values.\n",
+    " 2. Spearman's correlation coefficient: same as Peason's except using rank X and Y instead of actual values. - non-parametric\n",
     " \n",
-    " 3. Kendall's correlation coefficient: use the number of *cordant* and *discordant* pairs.\n",
+    " 3. Kendall's correlation coefficient: use the number of *cordant* and *discordant* pairs. - non-parametric \n",
     " \n",
-    " Pearson's r is **very** sensitive to outliers. \n",
+    " $\\tau = 2 \\frac{Nc-Nd}{N(N-1)} $\n",
+    " \n",
+    " **Note** Pearson's r is **very** sensitive to outliers. \n",
     " \n",
     " ![Figure 3.24](http://www.astroml.org/_images/fig_correlations_1.png)"
    ]
