--- a/lectures/ast502-lecture7.ipynb
+++ b/lectures/ast502-lecture7.ipynb
@@ -198,7 +198,7 @@
     "\n",
     "$$p(M,\\theta \\,|\\,D,I) = \\frac{p(D\\,|\\,M,\\theta,I)\\,p(M,\\theta\\,|\\,I)}{p(D\\,|\\,I)},$$    '\n",
     "\n",
-    "(Eq 5.22) quantifying the posrerior pdf of parameters describing a single model, with that model assumed to be true. However, in model selection and hypothesis testing, we formulate alternative scenarios and ask which ones are best support by the available data.\n",
+    "(Eq 5.22) quantifying the posterior pdf of parameters describing a single model, with that model assumed to be true. However, in model selection and hypothesis testing, we formulate alternative scenarios and ask which ones are best support by the available data.\n",
     "\n",
     "Marginalize over model parameter space $\\theta$\n",
     "to obtain **the probability of model $M$** given the data $D$ and prior information $I$:\n",
