--- a/lectures/ast502-lecture16.ipynb
+++ b/lectures/ast502-lecture16.ipynb
@@ -19,9 +19,10 @@
     "* 9.3: Generative Classification\n",
     "    * General Conceptes\n",
     "    * Naive Bayes\n",
-    "    * Gaussian Naive Bayes and Gaussian Bayes Classifiers\n",
+    "    * Gaussian Naive Bayes\n",
     "    * Linear Discriminant Analysis and Relatives\n",
-    "    * More Flexible Density Models: Mixtures"
+    "    * More Flexible Density Models: Mixtures\n",
+    "* 9.8~: Small Comments on *Performance*\n"
    ]
   },
   {
@@ -115,6 +116,8 @@
     "Given a set of **{x}** consisting of $N$ points in $D$ dimensions, such that $x_{i}^{j}$ is the *j*th feature of the *i*th point, and a set of descrete labels {y} draw from *K* classes, with values $y_{k}$, Bayes' Theorem describes the relation between the labels and features:\n",
     "\n",
     "$$p(y_{k}|x_{i}) = \\dfrac{p(x_i | y_k)p(y_k)}{\\sum_i p(x_i | y_k)p(y_k)}$$\n",
+    "\n",
+    "where $p(y_k)$ is the prior probability, and $p(x_i | y_k)$ is the probability distribution model\n",
     "\n",
     "If we knew the full probability densities $p(\\textbf{x}, y)$ it would be straightforward to estimate the classification likelihoods directly from the data"
    ]
@@ -248,7 +251,7 @@
     }
    },
    "source": [
-    "# Gaussian Naive Bayes and Gaussian Bayes Classifiers\n",
+    "# Gaussian Naive Bayes\n",
     "\n",
     "One way to handle continuous values for $X$ is to model $p(x_i|y=y_k)$ as one-dimensional normal distributions, with means $\\mu_{ik}$ and widths $\\sigma_{ik}$. The naive Bayes estimator is then\n",
     "\n",
@@ -707,7 +710,7 @@
     "\n",
     "If we were to relax the requirement that the convariances of the Gaussians are constant, the discriminant function for the classes become quadratic (*Quadratic Discriminant Analysis*)\n",
     "\n",
-    "$$g(\\textbf{x}) = -\\dfrac{1}{2}log|\\Omega_k| - \\dfrac{1}{2}(\\textbf{x}-\\mu_k)^TC^{-1}(\\textbf{x}-\\mu_k) + log\\pi_k\n",
+    "$$g(\\textbf{x}) = -\\dfrac{1}{2}log|\\Omega_k| - \\dfrac{1}{2}(\\textbf{x}-\\mu_k)^T\\Omega_{k}^{-1}(\\textbf{x}-\\mu_k) + log\\pi_k\n",
     "$$"
    ]
   },
@@ -892,7 +895,7 @@
     "\n",
     "The above classifications so far have made some restrictive assumptions: either that of conditional independence or that the distributions are Gaussian. However, a more flexible model might improve the completeness and efficiency of the classification. For that we can look to the techniques from Chapter 6.\n",
     "\n",
-    "The natural extension of the Gaussian assumptions is to use GMM's to determine the density distribution, i.e., a GMM Bayes Classifier. Each of the components may be constrained to a simple case (such as diagonal-covariance-only Gaussians etc) to ease the computational cost of model fitting.\n",
+    "The natural extension of the Gaussian assumptions is to use Gaussian Mixture Models (GMMs) to determine the density distribution, i.e., a GMM Bayes Classifier. Each of the components may be constrained to a simple case (such as diagonal-covariance-only Gaussians etc) to ease the computational cost of model fitting.\n",
     "\n",
     "Note that the number of Gaussian components,  KK , must be chosen for each class,  kk , independently.\n",
     "\n",
