--- a/lectures/ast502_final_timeseries.ipynb
+++ b/lectures/ast502_final_timeseries.ipynb
@@ -52,7 +52,7 @@
     "- They emit light across the electromagnetic spectrum and can be observed in most wavelength bands\n",
     "- The name \"quasar\" comes from \"quasi-stellar radio source\": they were first identified as radio emission sources which appeared as dim star-like point sources in optical wavelengths\n",
     "- Quasars are readily confirmed by spectroscopic observations, but how can we identify a candidate quasar in the first place?\n",
-    "- Most known quasars come from time domain observations (SDSS)\n",
+    "- Most known quasars come from SDSS observations\n",
     "- Quasars typically possess interesting properties in the time domain in their color and variability which can be used to nominally identify them\n",
     "\n",
     "\n",
